[package]
name = "mouseless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = "2.0.0"
mouse-rs = "0.4"
# winapi = { version = "0.3.9", features = ["winuser", "libloaderapi", "minwindef", "ntdef"] }
